--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "darshan-portfolio",
+  "name": "darshanchobarkar.com",
+  "description": "My personal portfolio",
+  "author": "Darshan Chobarkar",
   "version": "1.0.0",
   "private": true,
-  "description": "darshan-portfolio",
-  "author": "Darshan Chobarkar",
   "keywords": [
+    "Darshan",
+    "website",
+    "Web Development",
+    "CMS",
     "gatsby"
   ],
   "scripts": {
