--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
-  "extends": ["standard", "prettier", "plugin:import/errors", "plugin:import/warnings"],
+  "extends": [
+    "standard",
+    "prettier",
+    "plugin:import/errors",
+    "plugin:import/warnings"
+  ],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
@@ -40,7 +45,8 @@
     "key-spacing": "off",
     "linebreak-style": "off",
     "max-len": [
-      "warn", {
+      "warn",
+      {
         "code": 120,
         "ignoreComments": true,
         "ignorePattern": "(\\${tw\\`(.*)\\`}$|src\\:(.*))",
@@ -60,12 +66,14 @@
     "no-undef": "off",
     "no-underscore-dangle": "warn",
     "no-unused-expressions": [
-      "warn", {
+      "warn",
+      {
         "allowTaggedTemplates": true
       }
     ],
     "no-unused-vars": [
-      "warn", {
+      "warn",
+      {
         "argsIgnorePattern": "res|next|stage|^err|on|config"
       }
     ],
@@ -73,7 +81,9 @@
     "nonblock-statement-body-position": "off",
     "object-curly-newline": "off",
     "operator-linebreak": [
-      "warn", "after", {
+      "warn",
+      "after",
+      {
         "overrides": {
           "?": "ignore",
           ":": "ignore"
@@ -83,7 +93,9 @@
     "padded-blocks": "off",
     "prefer-destructuring": "off",
     "quotes": [
-      "error", "single", {
+      "error",
+      "single",
+      {
         "avoidEscape": true,
         "allowTemplateLiterals": true
       }
@@ -96,7 +108,8 @@
     // JSX-a11y
     "jsx-a11y/accessible-emoji": "off",
     "jsx-a11y/anchor-is-valid": [
-      "warn", {
+      "warn",
+      {
         "aspects": ["invalidHref"]
       }
     ],
@@ -110,14 +123,13 @@
     "react/jsx-boolean-value": "off",
     "react/jsx-closing-bracket-location": "off",
     "react/jsx-curly-brace-presence": "off",
-    "react/jsx-filename-extension": [
-      "warn", { "extensions": [".js", ".jsx"] }
-    ],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/jsx-first-prop-new-line": "off",
     "react/jsx-indent": ["error", 4],
     "react/jsx-indent-props": "off",
     "react/jsx-max-props-per-line": [
-      "warn", {
+      "warn",
+      {
         "maximum": 5
       }
     ],
