--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "portfolio-app",
-  "version": "0.1.0",
+  "name": "darshanwebdev-com",
+  "description": "A portfolio website created using GatsbyJS",
+  "version": "1.0.0",
+  "author": "Darshan Chobarkar <admin@darshanwebdev.com> (https://darshanwebdev.com)",
+  "homepage": "https://darshanwebdev.com",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -54,5 +58,12 @@
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
+  },
+  "repository": {
+    "url": "https://github.com/dchobarkar/portfolio",
+    "type": "git"
+  },
+  "bugs": {
+    "url": "https://github.com/dchobarkar/portfolio/issues"
   }
-  }
+}
