--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "darshanwebdev-com",
   "description": "A portfolio website created using GatsbyJS",
   "version": "1.0.0",
-  "author": "Darshan Chobarkar <admin@darshanwebdev.com> (https://darshanwebdev.com)",
+  "author": "Darshan Chobarkar <contact@darshanwebdev.com> (https://darshanwebdev.com)",
   "homepage": "https://darshanwebdev.com",
   "license": "MIT",
   "private": true,
