--- a/public/profile/projects.json
+++ b/public/profile/projects.json
@@ -2,7 +2,7 @@
   "projects": [
     {
       "image": "",
-      "title": "Analytical System",
+      "title": "Analytical System (BPCL)",
       "bodyText": "- Worked with client's management team to analyze and optimize then day to day information distribution system.\n -  Reviewed code, debugged problems, and corrected issues.\n - Discussed project progress with client, collected feedback on different stages and directly addressed concerns.\n - Provided software application engineering and maintenance for development lifecycle.",
       "links": [
         {
@@ -21,12 +21,16 @@
     },
     {
       "image": "",
-      "title": "Digital System",
+      "title": "Digital System (BPCL)",
       "bodyText": "- Worked with client's management team to examine and digitize then paper based data handling system.\n - Built a digital solution to replace client's daily data collection systems.\n - Facilitated the client by solving complex problems, building solution frameworks and leading initiatives.",
       "links": [
         {
           "text": "GitHub",
           "href": "https://github.com/dchobarkar/digital-system-client"
+        },
+        {
+          "text": "Live",
+          "href": "https://drive.google.com/file/d/1Emygfa5JkwtEQulNFWVpPxyR3R6h1LTF/view?usp=drive_link"
         }
       ],
       "tags": [
@@ -38,6 +42,28 @@
         "PostgreSQL"
       ]
     },
+    {
+      "image": "",
+      "title": "Creati AI (SAAS AI Platform)",
+      "bodyText": "- Developed a robust platform using Next.js that offers five distinct AI-driven services: Conversation, Code Generation, Image Generation, Video Generation, and Music Generation.\n - Integrated Clerk for user authentication and Stripe for payment processing, enabling users to register, access 5 free prompts, and upgrade to a Pro plan for unlimited access.\n - Utilized Prisma for efficient database management, Radix-UI for accessible UI components, Replicate for model deployment, and TailwindCSS for responsive design.\n - Implemented a scalable architecture that supports a freemium model, encouraging user engagement and providing a clear upgrade path for enhanced service access.",
+      "links": [
+        {
+          "text": "GitHub",
+          "href": "https://github.com/dchobarkar/saas-ai-platform"
+        }
+      ],
+      "tags": [
+        "TypeScript",
+        "Next.js",
+        "Tailwind CSS",
+        "Stripe",
+        "OpenAI",
+        "Crisp",
+        "Prisma",
+        "Clerk"
+      ]
+    },
+
     {
       "title": "Tic Tac Toe",
       "bodyText": "- Tic Tac Toe game app based on react-native-cli.\n - A react-native-cli based game in which two players take turns in drawing either an ' O' or an ' X' in one square of a grid consisting of nine squares.\n - The winner is the first player to get three of the same symbols in a row.",
